Update styling so it loads correctly on iPhone

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,16 +2,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  // padding: 25px;
 }
 
 .spacer {
   flex: 1 1 auto;
 }
 .header {
-  padding-left: 10px;
+  padding-left: 5px;
 }
 
 mat-toolbar {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+  padding: 0px 0px 0px 5px;
 }
