--- a/src/app/jokes/jokes.component.scss
+++ b/src/app/jokes/jokes.component.scss
@@ -4,11 +4,14 @@
   align-items: center;
 
   ul {
-    width: 80%;
+    width: 90%;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    // Safari only:
+    padding-inline-start: 0px;
 
     li {
       list-style: none;
